# fast-api

./: Dockerfile  auth.py  db.py  main.py  models.py  pyproject.toml  requirements.txt
api/: tasks.py  users.py
models/: task.py  user.py
